--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 /* Shared */
@@ -48,12 +49,12 @@ header .hero-section{
     width: 60%;
 }
 .hero-data .hero-title{
-    text-align: justify;
+
     font-size: 44px;
     font-weight: 600;
 }
 .hero-data .hero-description{
-    text-align: justify;
+
     font-size: 16px;
     font-weight: 400;
 }
@@ -70,4 +71,75 @@ header .hero-section{
     font-size: 15px;
     border: none;
     border-radius: 8px;
+}
+.hero-section button:hover{
+    background-color: #000000;
+    transition-duration: 1s;
+    cursor:pointer;
+}
+
+/* Main */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.skill-section{
+    background-color: #EDF7FA;
+    padding: 30px;
+    text-align: center;
+}
+.skill-section h1{
+    font-size: 30px;
+}
+
+.skill-section-cards{
+    
+    margin-top: 50px;
+    display: flex;
+    gap: 45px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.skill-section-cards .skill-card{
+    padding: 15px;
+    text-align: center;
+    width: 200px;
+    height: 150px;
+
+    border-radius: 10px; 
+    background-color: #FFFFFF;
+}
+.skill-section-cards img{
+    width: 80px;
+    height: 80px;
+}
+
+.skill-section-cards .skill-title{
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+}
+
+
+
+/* Footer */
+footer{
+    margin-top: 87px;
+}
+footer .footer-items{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    gap: 15px;
+
+}
+footer .footer-items img{
+    height: 30px;
+    width: 30px;
+    border-radius: 8px;
+}
+footer p{
+    text-align: center;
 }
